<resources>
    <!--Messages-->
    <string name="error_log_in">Erro ao se conectar</string>
    <string name="log_in_successfull">Conectado com sucesso !</string>
    <string name="log_in_unsuccessfull">Usuário e/ou senha inválidos !</string>
    <string name="sign_up_successfull">Cadastrado com sucesso !</string>
    <string name="sign_up_unsuccessfull">Erro ao cadastrar. Você está conectado à internet ?</string>
    <string name="email_already_taken">E-mail já cadastrado.</string>
    <string name="email_not_valid">Informe um e-mail válido</string>
    <string name="email_not_found">E-mail não cadastrado.</string>
    <string name="connection_problems">Problemas de conexão. Verifique sua conexão com a Internet e tente novamente.</string>
    <string name="msg_blank_login">Informe usuário e senha para login</string>
    <string name="login_dialog_title">Aguarde</string>
    <string name="login_dialog_msg">Realizando login...</string>
    <string name="signup_dialog_title">Aguarde</string>
    <string name="signup_dialog_msg">Cadastrando você em nosso sitema...</string>
    <string name="signup_fields_empty">Ops.. Os campos precisam ser preenchidos</string>
    <string name="password_mismatch">Senha e confirmação de senha devem ser iguais</string>
    <!--Strings-->
    <string name="facebook">Login com Facebook</string>
    <string name="facebook_signup">Entrar com Facebook</string>
    <string name="app_name">Seu pedido</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="password">Senha</string>
    <string name="password_confirmation">Redigite a senha</string>
    <string name="signin_btnLogin">Entrar</string>
    <string name="signin_btnSignup">Cadastre-se</string>
    <string name="signup_btnLogin">Tela de login</string>
    <string name="signup_btnSignup">Cadastrar</string>
    <string name="forgotPassord">Esqueci minha senha</string>
    <string name="logOut">Sair</string>

    <string name="signin_title">Login</string>
    <string name="signup_title">Cadastro</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
