<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/primary"
    tools:context="com.gabrielmadeira.seupedido.Signin">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint_layout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_image"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/logo"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:id="@+id/useremailLogin"
            android:inputType="textEmailAddress"
            android:textColor="@color/accent"
            android:hint="@string/e_mail"
            android:textColorHint="@color/white_hint"
            android:backgroundTint="@color/white_hint"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            fontPath="fonts/Roboto-Regular.ttf"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintHorizontal_bias="0.4"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            tools:ignore="MissingPrefix" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white_hint"
            android:textColorHint="@color/white_hint"
            android:backgroundTint="@color/white_hint"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/useremailLogin"
            andfontPath="fonts/Roboto-Regular.ttf"
            android:id="@+id/userpassLogin"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="10dp"
            tools:ignore="MissingPrefix" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassord"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/btnForgotpass"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/primary_dark"
            android:elevation="4dp"
            android:id="@+id/loginButton"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/userpassLogin"
            android:textColor="#FFF"
            android:text="@string/signin_btnLogin"
            fontPath="fonts/Roboto-Bold.ttf"
            app:layout_constraintHorizontal_bias="1.0"
            tools:ignore="MissingPrefix"
            android:onClick="login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            android:text="@string/signin_btnSignup"
            android:textColor="@color/accent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            fontPath="fonts/Roboto-Bold.ttf"
            android:id="@+id/signupButton"
            android:onClick="signupActivity"
            tools:ignore="MissingPrefix" />
        <!--<Button-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/facebook_button"-->
            <!--android:text="@string/facebook"-->
            <!--android:textColor="@color/white_hint"-->
            <!--fontPath="fonts/Roboto-Bold.ttf"-->
            <!--android:layout_marginTop="24dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/signupButton"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--android:layout_marginStart="16dp"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--android:id="@+id/facebookButton"-->
            <!--android:clickable="true"-->
            <!--tools:ignore="MissingPrefix" />-->


    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
